--- a/css/style.scss
+++ b/css/style.scss
@@ -14,7 +14,6 @@ nav {
     justify-content: space-between;
     padding: 5px 80px;
     color: white;
-    margin-bottom: 30px;
     
     h2 {
         margin-right: 20px;
@@ -26,5 +25,15 @@ nav {
 }
 
 .content {
-    margin: 20px;
+    display: flex;
+}
+#diagram {
+    width: 80vw !important;
+}
+#explanation {
+    width: 50vw;
+    min-height: 100%;
+    padding-bottom: 15px;
+    background-color: grey;
+
 }
