--- a/css/style.scss
+++ b/css/style.scss
@@ -32,8 +32,10 @@ nav {
 }
 #explanation {
     width: 50vw;
-    min-height: 100%;
+    min-height: 100vw;
     padding-bottom: 15px;
     background-color: grey;
+    color: white;
+    padding: 20px
 
 }
